# inference-engine

./: .clang-format  .gitignore  BENCH.md  CMakeLists.txt  Makefile  README.md  requirements.txt  writeup.md
.github/workflows/: ci.yml
src/: forward.cpp  forward.hpp  gemm.cpp  gemm.hpp  kv_cache.hpp  main.cpp  model.cpp  model.hpp  npy.hpp  profile.hpp  quant.cpp  quant.hpp  tokenizer.cpp  tokenizer.hpp
tests/: check_argmax.py  check_layers.py  encode_fixtures.txt  make_encode_fixtures.py  make_fixtures.py  test_encode.cpp  test_gemm.cpp  test_kv_cache.cpp  test_linear.cpp  test_loader.cpp  test_quant.cpp
tools/: convert_tokenizer.py  export_weights.py  format_spec.py  reference.py
